sf-hrms/force-app/main/default/objects/Slack_Config__c/Slack_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Slack gateway configuration. A protected custom setting rather than custom metadata on purpose: the signing secret is data, so it is set in this org and never travels in source control.</description>
    <label>Slack Config</label>
</CustomObject>