sf-hrms/force-app/main/default/objects/Slack_Config__c/fields/Digest_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Digest_Channel_Id__c</fullName>
    <label>Digest Channel Id</label>
    <description>Slack channel the morning who-is-out digest is posted to, for example C0BVCBYSEJV. Leave blank to send no digest from this app.</description>
    <inlineHelpText>Channel id, not name. Blank means no digest is sent.</inlineHelpText>
    <type>Text</type>
    <length>32</length>
</CustomField>