sf-hrms/force-app/main/default/objects/Slack_Config__c/fields/Gateway_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Enabled__c</fullName>
    <label>Gateway Enabled</label>
    <description>Master switch for the Apex Slack gateway. Off means every inbound request is refused, which is how the endpoint stays inert until it is deliberately turned on.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>