sf-hrms/force-app/main/default/objects/Slack_Config__c/fields/Signing_Secret__c.field-meta.xml
<CustomField>
    <fullName>Signing_Secret__c</fullName>
    <label>Slack Signing Secret</label>
    <description>The app signing secret from Basic Information in the Slack app. Every inbound request is verified against this, so it is the only thing standing between the public endpoint and anybody on the internet. Never commit this value.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>